# OpenFOAM_HMM

./: .gitignore  .gitmodules  .timeStamp  Allwmake  Allwmake-scan  BuildIssues.txt  CHANGES-splitCyclic  CONTRIBUTORS.md  COPYING  GO2WORK.sh  README  README.html  README.md  README.org  README.txt  ReleaseNotes-1.5  ReleaseNotes-1.5.html  ReleaseNotes-1.6  ReleaseNotes-2.0  ReleaseNotes-2.0.0  ReleaseNotes-dev  TODO  differencesWrtDev.txt  qq
META-INFO/: .gitignore  README.md  api-info
applications/: Allwmake
applications/utilities/mesh/generation/cvMesh/cvMeshSurfaceSimplify/fastdualoctree_sgp/: CMakeLists.txt  Doxyfile  LookUpTable.h  MarchingCubes.cpp  MarchingCubes.h  README.txt  cube.h  data_access.cpp  data_access.h  fp_identifier_parser.inc  fp_opcode_add.inc  fparser.cpp  fparser.h  fpaux.h  fpconfig.h  fpoptimizer.cpp  fptypes.h  hash.h  hash_noptr.h  hash_octree.cpp  hash_octree.h  hash_ptr.h  implfuns.h  leaf_octree.cpp  leaf_octree.h  mc_draw.cpp  mc_draw.h  mem_octree.cpp  mem_octree.h  mlist.h  morton.cpp  morton.h  mvector.h  opt_octree.cpp  opt_octree.h  perf_main.cpp  point.h  ptr_octree.cpp  ptr_octree.h  viz_glui_cmdline.cpp  (+6 more)
applications/utilities/postProcessing/graphics/PV3FoamBlockMeshReader/PV3FoamBlockMeshReader/: CMakeLists.txt  PV3FoamBlockMeshReader.qrc  PV3FoamBlockMeshReader.xml  PV3FoamBlockMeshReader_SM.xml  vtkPV3FoamBlockMeshReader.cxx  vtkPV3FoamBlockMeshReader.h
applications/utilities/postProcessing/graphics/PV3blockMeshReader/PV3blockMeshReader/: CMakeLists.txt  vtkPV3blockMeshReader.cxx  vtkPV3blockMeshReader.h
applications/utilities/postProcessing/graphics/PVReaders/PVFoamReader/: Allwclean  Allwmake  CMakeLists-Project.txt  CMakeLists.txt  pqFoamReaderControls.cxx  pqFoamReaderControls.h  vtkPVFoamReader.cxx  vtkPVFoamReader.h
applications/utilities/postProcessing/graphics/PVReaders/PVFoamReader/PVFoamReader/: CMakeLists.txt  PVFoamReader.xml  PVFoamReader_SM.xml  pqFoamReaderControls.cxx  pqFoamReaderControls.h  vtkPVFoamReader.cxx  vtkPVFoamReader.h
applications/utilities/postProcessing/graphics/PVReaders/PVFoamReader/vtkPVFoam/: vtkPVFoam.C  vtkPVFoam.H  vtkPVFoamFieldTemplates.C  vtkPVFoamFields.C  vtkPVFoamMesh.C  vtkPVFoamMeshLagrangian.C  vtkPVFoamMeshVolume.C  vtkPVFoamTemplates.C  vtkPVFoamUpdateInfo.C  vtkPVFoamUpdateInfoFields.H  vtkPVFoamUpdateTemplates.C  vtkPVFoamVolFields.H
applications/utilities/postProcessing/graphics/PVReaders/PVFoamReader/vtkPVFoam/Make/: files  options
applications/utilities/postProcessing/graphics/PVReaders/PVblockMeshReader/: Allwclean  Allwmake  CMakeLists-Project.txt  CMakeLists.txt  pqFoamBlockMeshControls.cxx  pqFoamBlockMeshControls.h  vtkPVblockMeshReader.cxx  vtkPVblockMeshReader.h
applications/utilities/postProcessing/graphics/PVReaders/PVblockMeshReader/PVblockMeshReader/: CMakeLists.txt  PVblockMeshReader.xml  PVblockMeshReader_SM.xml  pqFoamBlockMeshControls.cxx  pqFoamBlockMeshControls.h  pqRefreshProperty.cxx  pqRefreshProperty.h  pqShowPointNumbersProperty.cxx  pqShowPointNumbersProperty.h  vtkPVblockMeshReader.cxx  vtkPVblockMeshReader.h
applications/utilities/postProcessing/graphics/PVReaders/PVblockMeshReader/vtkPVblockMesh/: vtkPVblockMesh.C  vtkPVblockMesh.H  vtkPVblockMeshConvert.C  vtkPVblockMeshUtils.C
applications/utilities/postProcessing/graphics/PVReaders/PVblockMeshReader/vtkPVblockMesh/Make/: files  options
applications/utilities/postProcessing/graphics/PVReaders/foamReader/: CMakeLists-Project.txt  CMakeLists-Project57.txt  CMakeLists.txt
debian/: changelog  control  copyright  postinst  rules
doc/: Allwmake  Build.md  BuildIssues.md  Config.md  Cross-Compile-mingw.md  GUIDELINES  Requirements.md  THIRD_PARTY  codingStyleGuide.org  cross-compile-mingw.md  cvMesh.org  openfoam.1.in
etc/: README.md  aliases.csh  aliases.sh  bashrc  bashrc.orig  cellModels  clearEnv.csh  clearEnv.sh  colourTables  controlDict  cshrc  mergeHistory  openfoam  prefs.csh-EXAMPLE  prefs.sh-EXAMPLE  settings.csh  settings.sh  unset.csh  unset.sh
modules/: Allwmake  README.md  list-modules
scripts/: GO2WORK.sh  MEMO  MEMO_FILES_OPENMP_OFFLOAD.sh  MEMO_SETUP.sh  MEMO_SETUP.sh.V1  MEMO_SETUP_with_HIPCC.sh  clean_all_script.sh  helper.sh
src/: Allwmake  Allwmake-scan
src/functionObjects/graphics/runTimePostProcessing/: Allwclean  Allwmake  CMakeLists-Common.txt  CMakeLists-OpenFOAM.txt  CMakeLists-Project.txt  CMakeLists.txt  contourFilter.C  contourFilter.H  cuttingPlaneFilter.C  cuttingPlaneFilter.H  fieldVisualisationBase.C  fieldVisualisationBase.H  functionObjectBase.C  functionObjectBase.H  functionObjectCloud.C  functionObjectCloud.H  functionObjectLine.C  functionObjectLine.H  functionObjectSurface.C  functionObjectSurface.H  geometryBase.C  geometryBase.H  geometryCloud.C  geometryCloud.H  geometryCloudGather.C  geometryCloudTemplates.C  geometryPatches.C  geometryPatches.H  geometryPatchesGather.C  geometryPatchesTemplates.C  geometrySurface.C  geometrySurface.H  pathline.C  pathline.H  pointData.C  pointData.H  runTimePostProcessing.C  runTimePostProcessing.H  runTimePostProcessingFunctionObject.C  runTimePostProcessingFunctionObject.H  (+14 more)
src/functionObjects/graphics/runTimePostProcessing/dummy/: runTimePostProcessingDummy.C  runTimePostProcessingDummy.H
src/functionObjects/graphics/runTimePostProcessing/dummy/Make/: files  options
src/postProcessing/functionObjects/graphics/runTimePostProcessing/: Allwclean  Allwmake  CMakeLists-Common.txt  CMakeLists.txt  IOrunTimePostProcessing.H  fieldVisualisationBase.C  fieldVisualisationBase.H  functionObjectCloud.C  functionObjectCloud.H  functionObjectLine.C  functionObjectLine.H  functionObjectSurface.C  functionObjectSurface.H  geometryBase.C  geometryBase.H  geometrySurface.C  geometrySurface.H  pathline.C  pathline.H  pointData.C  pointData.H  runTimePostProcessing.C  runTimePostProcessing.H  runTimePostProcessingTemplates.C  scene.C  scene.H  surface.C  surface.H  text.C  text.H
tutorials/: Allclean  Allcollect  Allrun  Alltest  AutoTest  CleanFunctions  README.txt  RunFunctions  cleanAll  runAll
(+40217 files in other folders)
